# cats

./: .env.example  README.MD  docker-compose.yaml  pyproject.toml
cats/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
cats/migrations/: 0001_initial.py  0002_alter_breed_name_alter_breed_parent_breed_and_more.py  0002_alter_breed_options_alter_cat_options.py  0003_alter_rate_options_remove_rate_positive_rate_value.py
config/: settings.py  urls.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_is_active.py
